--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.91.1",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
     "react-day-picker": "^9.9.0",
+    "react-dom": "^19.2.0",
     "recharts": "^3.7.0"
   },
   "devDependencies": {
