--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -386,3 +386,6 @@ s3_secret_key = "env(S3_SECRET_KEY)"
 # Bypasses 401 JWT error when supabase talks to the edge function
 [functions.create-checkout-session]
 verify_jwt = false
+
+[functions.stripe-webhook]
+verify_jwt = false
