--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -389,3 +389,8 @@ verify_jwt = false
 
 [functions.stripe-webhook]
 verify_jwt = false
+
+[auth.external.google]
+enabled = true
+client_id = "env(GOOGLE_OAUTH_CLIENT_ID)"
+secret = "env(GOOGLE_OAUTH_CLIENT_SECRET)"
