--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@capacitor/browser": "^8.0.0",
     "@capacitor/cli": "^7.4.5",
     "@capacitor/core": "^8.0.2",
+    "@capacitor/filesystem": "^8.1.0",
+    "@capacitor/share": "^8.0.0",
     "@supabase/supabase-js": "^2.91.1",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.563.0",
