--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor/cli": "^7.4.5",
     "@capacitor/core": "^8.0.2",
     "@capacitor/filesystem": "^8.1.0",
+    "@capacitor/local-notifications": "^8.0.0",
     "@capacitor/share": "^8.0.0",
     "@supabase/supabase-js": "^2.91.1",
     "jspdf": "^4.0.0",
