--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "^19.2.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.2.0",
-    "recharts": "^3.7.0"
+    "recharts": "^3.7.0",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
