--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@capacitor/filesystem": "^8.1.0",
     "@capacitor/local-notifications": "^8.0.0",
     "@capacitor/share": "^8.0.0",
+    "@capgo/native-purchases": "^8.0.20",
     "@supabase/supabase-js": "^2.91.1",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.563.0",
