sentry and framer animations added

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@capacitor/local-notifications": "^8.0.0",
     "@capacitor/share": "^8.0.0",
     "@capgo/native-purchases": "^8.0.20",
+    "@sentry/react": "^10.38.0",
     "@supabase/supabase-js": "^2.91.1",
+    "framer-motion": "^12.34.0",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
