--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@capacitor/filesystem": "^8.1.0",
     "@capacitor/local-notifications": "^8.0.0",
     "@capacitor/share": "^8.0.0",
+    "@capacitor/status-bar": "^8.0.1",
     "@capgo/native-purchases": "^8.0.20",
     "@sentry/react": "^10.38.0",
     "@supabase/supabase-js": "^2.91.1",
