--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@capacitor/local-notifications": "^8.0.0",
     "@capacitor/share": "^8.0.0",
     "@capacitor/status-bar": "^8.0.1",
+    "@capgo/capacitor-navigation-bar": "^8.0.22",
     "@capgo/native-purchases": "^8.0.20",
     "@sentry/react": "^10.38.0",
     "@supabase/supabase-js": "^2.91.1",
