--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "i18next": "^25.6.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "@capacitor/android": "^8.0.2",
     "@capacitor/app": "^8.0.0",
     "@capacitor/browser": "^8.0.0",
@@ -31,6 +33,7 @@
     "react": "^19.2.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.3.5",
     "recharts": "^3.7.0",
     "sonner": "^2.0.7"
   },
