--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "test:run": "vitest run"
   },
   "dependencies": {
-    "i18next": "^25.6.3",
-    "i18next-browser-languagedetector": "^8.2.0",
     "@capacitor/android": "^8.0.2",
     "@capacitor/app": "^8.0.0",
     "@capacitor/browser": "^8.0.0",
@@ -28,12 +26,15 @@
     "@sentry/react": "^10.38.0",
     "@supabase/supabase-js": "^2.91.1",
     "framer-motion": "^12.34.0",
+    "i18next": "^25.6.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.3.5",
+    "react-router-dom": "^7.13.1",
     "recharts": "^3.7.0",
     "sonner": "^2.0.7"
   },
